--- a/css/main.css
+++ b/css/main.css
@@ -32,5 +32,6 @@ body{
   margin: 0%;
   background-color: #ffea82;
   color: #ffffff;
-  display: inline-flex;
+  display: flex;
+  flex-direction: column;
 }
