--- a/css/main.css
+++ b/css/main.css
@@ -33,5 +33,6 @@ body{
   background-color: #ffea82;
   color: #ffffff;
   display: flex;
-  flex-direction: column;
+  flex-flow: row wrap;
+  align-content: center;
 }
