--- a/css/main.css
+++ b/css/main.css
@@ -21,10 +21,11 @@ body{
 }
 
 .mainH1{
-  font-size: 175%;
+  font-size: 250%;
   color: #1fb0ff;
   font-family: 'Roboto Slab', serif;
   width: 100%;
+  align-self: center;
 }
 
 #second{
@@ -34,5 +35,5 @@ body{
   color: #ffffff;
   display: flex;
   flex-flow: row wrap;
-  align-content: center;
+  justify-content: center;
 }
