--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,13 @@ body{
   width: 100%;
 }
 
+.final{
+  font-size: 175%;
+  color: #1fb0ff;
+  font-family: 'Roboto Slab', serif;
+}
+
+
 .mainH1{
   font-size: 250%;
   color: #1fb0ff;
