--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,14 @@ hr{
   border-color: #1fb0ff;
 }
 
+aside{
+  margin: 2%;
+  font-size: 100%;
+  color: #1fb0ff;
+  font-family: 'Roboto Slab', serif;
+  align-self: flex-end;
+}
+
 .better{
   font-size: 175%;
   width: 100%;
