--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,15 @@ div.gallery img {
   align-self: center;
 }
 
+.sideH1{
+  text-align: right;
+  font-size: 250%;
+  width: 100%;
+  color: #1fb0ff;
+  font-family: 'Roboto Slab', serif;
+  align-self: center;
+}
+
 #second{
   padding: 2%;
   margin: 0%;
