--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@ div.gallery img {
 .third{
   padding: 2%;
   margin: 0%;
-  background-color: #ffea82;
+  background-color: #6f32bf;
   color: #ffffff;
   display: flex;
   flex-flow: row wrap;
