--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,7 @@ div.gallery img {
 }
 
 .sizedFixed{
-  background-attachment: fixed;
+  background-attachment: scroll;
   max-width: 60%;
   height: auto;
 }
