--- a/css/main.css
+++ b/css/main.css
@@ -83,8 +83,8 @@ div.gallery img {
 }
 
 .sizedFixed{
-  background-attachment: scroll;
-  max-width: 60%;
+  background-attachment: fixed;
+  max-width: 100%;
   height: auto;
 }
 
