--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ div.gallery img {
   text-align: center;
   width: 75%;
   font-size: 200%;
-  color: #1fb0ff;
+  color: #31b554;
   font-family: 'Roboto Slab', serif;
 }
 
