--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,12 @@ div.gallery img {
 }
 
 .greenH1{
-  
+  text-align: center;
+  font-size: 250%;
+  width: 100%;
+  color: #1fb0ff;
+  font-family: 'Roboto Slab', serif;
+  align-self: center;
 }
 
 .h2next{
