--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,7 @@ div.gallery img {
   text-align: center;
   font-size: 250%;
   width: 100%;
-  color: #1fb0ff;
+  color: #31b554;
   font-family: 'Roboto Slab', serif;
   align-self: center;
 }
